# SlimmedExperts

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: pre-commit-update.yaml  tests.yaml
agents/: coding_standards.md  testing_guidelines.md
configs/: config.yaml  experiment.yaml  pipeline.yaml
docs/: README.md  mkdocs.yaml
docs/source/: index.md
src/slimmed_experts/: data.py  experiment.py  model.py  pipeline.py  train.py
src/slimmed_experts/models/: __init__.py  factory.py  model.py
src/slimmed_experts/models/backbones/: __init__.py  base.py  mobilenet_v2.py  slimnet.py
src/slimmed_experts/models/heads/: __init__.py  base.py  linear.py
tests/: test_data.py  test_experiment_config.py  test_factory.py  test_model.py  test_train.py
