[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "slimmed_experts"
version = "0.0.1"
description = "Let's see if experts are slim."
authors = [
  { name = "Amin", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "deep learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "importlib-resources>=6.5.2",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "tensorflow>=2.21.0",
    "tensorflow-datasets>=4.9.9",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "typer>=0.24.1",
    "wandb>=0.25.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "invoke>=2.2.1",
    "mkdocstrings-python>=2.0.3",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "zensical>=0.0.24",
]

[project.scripts]
experiment = "slimmed_experts.experiment:app"

[tool.ruff]
line-length = 120

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
omit = ["tests/*"]
